--- a/frontend/style.css
+++ b/frontend/style.css
@@ -7,48 +7,11 @@
   --header-bg: #0a4c56; /* Deep Teal */
 }
 
-/* General Styling */
 body {
-  background-color: var(--background-color);
-  color: var(--text-color);
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 15px;
-}
-
-/* Navbar */
-.navbar {
-  width: 100%;
-  position: fixed; /* Fix it at the top */
-  top: 0;
-  left: 0;
-  z-index: 1000; /* Ensures it stays above other elements */
-  background: var(--header-bg);
-  padding: 15px;
-}
-
-.navbar-brand img {
-  height: 50px;
-  max-width: 150px;
-}
-
-.navbar-brand:hover {
-  color: var(--secondary-color);
-}
-
-.brand-text:hover {
-  color: var(--secondary-color);
-}
-
-.navbar-nav .nav-link {
-  color: white;
-  font-size: 18px;
-  font-weight: bold;
-  margin-right: 25px;
-}
-
-.navbar-toggler {
-  border: none;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    font-family: Arial, sans-serif;
+    margin: 0;
 }
 
 /* Form Container */
@@ -106,67 +69,7 @@ legend {
   background-color: var(--header-bg);
 }
 
-/* Navbar Styling */
-.navbar {
-  background-color: var(--nav-bar);
-  padding: 15px 0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-/* Navbar Brand */
-.navbar-brand {
-  display: flex;
-  align-items: center;
-  font-size: 1.4rem;
-  font-weight: bold;
-  color: var(--background-color);
-}
-
-.navbar-brand img {
-  margin-right: 10px;
-}
-
-/* Custom Toggler Button */
-.navbar-toggler {
-  border: none;
-  outline: none;
-}
-
-.navbar-toggler:focus {
-  box-shadow: none;
-}
-
-.custom-toggler .navbar-toggler-icon {
-  filter: invert(100%);
-}
-
-/* Navbar Links */
-.navbar-nav .nav-link {
-  color: white;
-  font-size: 1.1rem;
-  font-weight: 500;
-  padding: 8px 15px;
-  border-radius: 5px;
-  transition: background 0.3s ease-in-out;
-}
-
-.navbar-nav .nav-link:hover {
-  color: var(--secondary-color);
-}
-
-/* Mobile Optimization */
-@media (max-width: 992px) {
-  .navbar-nav {
-    text-align: center;
-    padding-top: 10px;
-  }
-}
-
 /* Add padding to the body or the next container element */
-body {
-  padding-top: 80px; /* Adjust this based on the height of your navbar */
-}
-
 /* Loading Screen Styles */
 .loading-screen {
   position: fixed;
@@ -199,4 +102,8 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.active-mode {
+    background-color: var(--primary-color) !important;
 }
